[SOME PART TO BE DELETED/SQUASHED] Create content and translate site

--- a/i18n/fr/docusaurus-plugin-content-blog/authors.yml
+++ b/i18n/fr/docusaurus-plugin-content-blog/authors.yml
@@ -1,11 +1,11 @@
 julie:
   name: Julie
-  title: Teacher
+  title: Enseignante
   url: https://github.com/Zwyx
   image_url: https://github.com/zwyx.png
 
 celine:
   name: Céline
-  title: Teacher
+  title: Enseignante
   url: https://github.com/Zwyx
   image_url: https://github.com/zwyx.png
