--- a/i18n/fr/docusaurus-plugin-content-pages/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-pages/index.mdx
@@ -1,5 +1,5 @@
 ---
-description: French Australian Bilingual Program for School Association
+description: Programme bilingue pour les écoles d'Australie occidentale
 ---
 
 import Link from "@docusaurus/Link";
@@ -10,10 +10,12 @@ import fabpsa from "/static/img/img.jpg";
 <div style={{ height: "48px" }} />
 
 <div style={{ margin: "48px", textAlign: "center" }}>
-	<div style={{ margin: "48px", fontSize: "2rem" }}>Welcome to FABPSA</div>
+	<div style={{ margin: "48px", fontSize: "2rem" }}>
+		Bienvenue sur le site de la FABPSA
+	</div>
 	<Image src={fabpsa} alt="FABPSA's logo" width="550px" />
 	<div style={{ margin: "48px 0", fontSize: "1.5rem" }}>
-		The French Australian Bilingual Program for School Association.
+		Le programme bilingue pour les écoles d'Australie occidentale.
 	</div>
 </div>
 
